# gcm

./: .dockerignore  Cargo.toml  Dockerfile  README.md
src/: main.rs  models.rs  prompt.rs
src/services/: gemini.rs  mod.rs  ollama.rs
