[package]
name = "gd"
version = "1.0.1"
edition = "2024"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
strip = true      # Automatically strip symbols from the binary.
codegen-units = 1
panic = "abort"
